--- a/.github/workflows/docker-publish-centos7-310.yml
+++ b/.github/workflows/docker-publish-centos7-310.yml
@@ -77,7 +77,7 @@ jobs:
           context: .
           file: centos7/python310.dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: 3.10
+          tags: ghcr.io/3.10
           labels: ${{ steps.meta.outputs.labels }}
 
       # Sign the resulting Docker image digest except on PRs.
