--- a/.github/workflows/docker-publish-centos7-38.yml
+++ b/.github/workflows/docker-publish-centos7-38.yml
@@ -77,7 +77,7 @@ jobs:
           context: .
           file: centos7/python38.dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: 3.8
+          tags: ghcr.io/briansidebotham/docker-python:3.8
           labels: ${{ steps.meta.outputs.labels }}
 
       # Sign the resulting Docker image digest except on PRs.
