--- a/.github/workflows/docker-publish-centos7-39.yml
+++ b/.github/workflows/docker-publish-centos7-39.yml
@@ -77,7 +77,7 @@ jobs:
           context: .
           file: centos7/python39.dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: 3.9
+          tags: ghcr.io/briansidebotham/docker-python:3.9
           labels: ${{ steps.meta.outputs.labels }}
 
       # Sign the resulting Docker image digest except on PRs.
