--- a/.github/workflows/docker-publish-centos7-38.yml
+++ b/.github/workflows/docker-publish-centos7-38.yml
@@ -18,8 +18,6 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}-centos7
   DOCKERFILE: centos7/python38.dockerfile
   PYTHONVERSION: 3.8
 
@@ -35,6 +33,13 @@ jobs:
       id-token: write
 
     steps:
+      - name: PrepareReg Names
+        run: |
+          echo IMAGE_NAME=$(echo ${{ github.repository }}-centos7 | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
+
+      # Might need this someday if we use tagging properly
+      # echo IMAGE_TAG=$(echo ${{ github.ref }} | tr '[:upper:]' '[:lower:]' | awk '{split($0,a,"/"); print a[3]}') >> $GITHUB_ENV
+
       - name: Checkout repository
         uses: actions/checkout@v2
 
