--- a/.github/workflows/docker-publish-centos7-39.yml
+++ b/.github/workflows/docker-publish-centos7-39.yml
@@ -1,4 +1,4 @@
-name: Docker
+name: CentOS7 Python 3.9
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
