Update Python version to be string rather than number other Python 3.10 comes out as 3.1

--- a/.github/workflows/docker-publish-centos7-310.yml
+++ b/.github/workflows/docker-publish-centos7-310.yml
@@ -19,7 +19,7 @@ env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
   DOCKERFILE: centos7/python310.dockerfile
-  PYTHONVERSION: 3.10
+  PYTHONVERSION: "3.10"
 
 jobs:
   build:
