--- a/.github/workflows/docker-publish-centos7.yml
+++ b/.github/workflows/docker-publish-centos7.yml
@@ -1,4 +1,4 @@
-name: CentOS7 Python 3.8
+name: CentOS7 OPT Python
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -18,8 +18,7 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  DOCKERFILE: centos7/python38.dockerfile
-  PYTHONVERSION: "3.8"
+  OS: centos8
 
 jobs:
   build:
@@ -35,7 +34,7 @@ jobs:
     steps:
       - name: PrepareReg Names
         run: |
-          echo IMAGE_NAME=$(echo ${{ github.repository }}-centos7 | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
+          echo IMAGE_NAME=$(echo ${{ github.repository }}-${{ env.OS }} | tr '[:upper:]' '[:lower:]') >> $GITHUB_ENV
 
       # Might need this someday if we use tagging properly
       # echo IMAGE_TAG=$(echo ${{ github.ref }} | tr '[:upper:]' '[:lower:]' | awk '{split($0,a,"/"); print a[3]}') >> $GITHUB_ENV
@@ -76,14 +75,34 @@ jobs:
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
+      - name: Build and push Docker image 3.8
         id: build-and-push
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
           context: .
-          file: ${{ env.DOCKERFILE }}
+          file: ${{ env.OS }}/python38.dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.PYTHONVERSION }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:3.8
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Build and push Docker image 3.9
+        id: build-and-push
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          file: ${{ env.OS }}/python39.dockerfile
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:3.9
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Build and push Docker image 3.10
+        id: build-and-push
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: .
+          file: ${{ env.OS }}/python310.dockerfile
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:3.10
           labels: ${{ steps.meta.outputs.labels }}
 
       # # Sign the resulting Docker image digest except on PRs.
